<resources>
    <string name="app_name">Conatus</string>
    <string name="college_name">Ajay Kumar Garg Engineering College</string>
    <string name="addres">27th km Stone, Delhi-Hapur Bypass Road,Ghaziabad-201009</string>
    <string name="webiste_link">www.teamconatus.in</string>
    <string name="email_id">teamconatus@gmail.com</string>
    <string name="fb_link">www.facebook.com/conatus.akg</string>
    <string name="mapskey">AIzaSyALHEPAgQTtgXo8EJ4kj_2Y3i6kIw1f3ls</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="about_us">About us</string>
    <string name="about_us_para2">In the last decade, Conatus has evolved as a technical base for its own members as well as the rest of the college. It has brought to the students the vast unexplored “technical horizon” within their grasp hold. Besides being the first technical society of AKGEC. Conatus leads the technological upfront by organizing a wide range of activities throughout the year.</string>
    <string name="about_us_para1">Conatus is the technical society of Computer Science and Information Technology in Ajay Kumar Garg Engineering College which brings to its students the illumination of the knowledge glow in IT sphere with its marvelous events, workshops and seminars. Founded on 10th October, 2005 by a group of 5 members Kumar Vishal, Ankit Garg, Ankit Mittal, Kapil Nawani and Animesh Roy. Conatus’ functioning is firmly supported by Prof. B. M. Kalra, HOD CSE, and our faculty coordinator, Ms. Mamta Bhusry.</string>


    <string-array name="team_view_pager_title">
        <item>MENTORS</item>
        <item>TEAM</item>
    </string-array>
    <array name="drawer_menu">
        <item>Home</item>
        <item>Events</item>
        <item>Magazines</item>
        <item>Gallery</item>
        <item>Our Team</item>
        <item>About Us</item>
        <item>Contact Us</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
